<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/individualItemView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IndividualTodoItemView">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="339dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/todologo" />

    <EditText
        android:id="@+id/todoEditBox"
        android:layout_width="326dp"
        android:layout_height="228dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="125dp"
        android:ems="10"
        android:gravity="top"
        android:hint="Add Todo Text Here"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/addToList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/addToList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:layout_marginBottom="64dp"
        android:text="Add To List"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todoEditBox" />

</androidx.constraintlayout.widget.ConstraintLayout>