<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/deletePage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteActivity">

    <EditText
        android:id="@+id/deleteEditBox"
        android:layout_width="327dp"
        android:layout_height="147dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="200dp"
        android:ems="10"
        android:gravity="top"
        android:hint="Add text to remove here"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/deleteItemButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todoLogo" />

    <ImageView
        android:id="@+id/todoLogo"
        android:layout_width="329dp"
        android:layout_height="55dp"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="19dp"
        app:layout_constraintBottom_toTopOf="@+id/deleteEditBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/todologo" />

    <Button
        android:id="@+id/deleteItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:layout_marginBottom="128dp"
        android:text="Delete Item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteEditBox" />

</androidx.constraintlayout.widget.ConstraintLayout>